// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-core example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  This is rendered only by the client for all but the very first render of the component tree.
</div>
`;

exports[`wonder-blocks-core example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    The list below should have three render entries; root placeholder, root children render, and child children render. If there are two child renders that means that the second forced render is still occurring for nested NoSSR components, which would be a bug.
  </span>
  <ul
    id="nossr-example-2-results"
  />
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    And below this is the actual NoSSR nesting, which should just show the child render.
  </span>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Child: render
  </div>
</div>
`;

exports[`wonder-blocks-core example 3 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    The list below should have six render entries; 2 x root placeholder, 2 x root children render, and 2 x child children render.
  </span>
  <ul
    id="nossr-example-3-results"
  />
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 16,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    And below this are the NoSSR component trees, which should just show their child renders.
  </span>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Child 1: render
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Child 2: render
  </div>
</div>
`;

exports[`wonder-blocks-core example 4 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "plum",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 32,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "fontFamily": "sans-serif",
        "fontSize": 24,
      }
    }
  >
    Hello, world!
  </span>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": "goldenrod",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 4,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Even with an array and inline styles!
  </div>
</div>
`;

exports[`wonder-blocks-core example 5 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onClick={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click me!
  </div>
  <span
    aria-hidden="true"
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
      }
    }
  >
    This text is hidden from screen readers.
  </span>
</div>
`;

exports[`wonder-blocks-core example 6 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      aria-label=""
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "alignItems": "center",
          "background": "#1865f2",
          "border": "none",
          "borderRadius": 4,
          "boxSizing": "border-box",
          "color": "#ffffff",
          "cursor": "pointer",
          "display": "inline-flex",
          "height": 40,
          "justifyContent": "center",
          "margin": 0,
          "outline": "none",
          "paddingBottom": 0,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 0,
          "position": "relative",
          "textDecoration": "none",
          "touchAction": "manipulation",
        }
      }
      tabIndex={0}
      type="button"
    >
      <span
        className=""
        style={
          Object {
            "MozOsxFontSmoothing": "grayscale",
            "WebkitFontSmoothing": "antialiased",
            "alignItems": "center",
            "display": "flex",
            "fontFamily": "Lato, sans-serif",
            "fontSize": 16,
            "fontWeight": "bold",
            "lineHeight": "20px",
            "overflow": "hidden",
            "pointerEvents": "none",
            "textOverflow": "ellipsis",
            "userSelect": "none",
            "whiteSpace": "nowrap",
          }
        }
      >
        Click Me to Rerender
      </span>
    </button>
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 1,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    />
  </div>
  <div
    aria-hidden="true"
    className=""
    style={
      Object {
        "MsFlexBasis": 16,
        "MsFlexPreferredSize": 16,
        "WebkitFlexBasis": 16,
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": 16,
        "flexDirection": "column",
        "flexShrink": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": 16,
        "zIndex": 0,
      }
    }
  />
  <h4
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    The UniqueIDProvider:
  </h4>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato, sans-serif",
          "fontSize": 16,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      Render 
      0
      : 
      uid--0-my-unique-id
    </span>
  </div>
</div>
`;

exports[`wonder-blocks-core example 7 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <h4
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    The initial render:
  </h4>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Inconsolata, monospace",
          "fontSize": 17,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      get("an-id"): 
      an-id
    </span>
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Inconsolata, monospace",
          "fontSize": 17,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      get("something"): 
      something
    </span>
  </div>
  <div
    aria-hidden="true"
    className=""
    style={
      Object {
        "MsFlexBasis": 16,
        "MsFlexPreferredSize": 16,
        "WebkitFlexBasis": 16,
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexBasis": 16,
        "flexDirection": "column",
        "flexShrink": 0,
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "width": 16,
        "zIndex": 0,
      }
    }
  />
  <h4
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Subsequent requests:
  </h4>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Inconsolata, monospace",
          "fontSize": 17,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      get("an-id"): 
      uid--1-an-id
    </span>
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Inconsolata, monospace",
          "fontSize": 17,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      get("something"): 
      uid--1-something
    </span>
  </div>
</div>
`;

exports[`wonder-blocks-core example 8 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <h4
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    First Provider with scope: first
  </h4>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato, sans-serif",
          "fontSize": 16,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      The id returned for "my-identifier": 
      uid-first-2-my-identifier
    </span>
  </div>
  <h4
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato, sans-serif",
        "fontSize": 20,
        "fontWeight": 700,
        "lineHeight": "24px",
        "marginBottom": 0,
        "marginTop": 0,
      }
    }
  >
    Second Provider with scope: second
  </h4>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato, sans-serif",
          "fontSize": 16,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      The id returned for "my-identifier": 
      uid-second-3-my-identifier
    </span>
  </div>
</div>
`;

exports[`wonder-blocks-core example 9 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Inconsolata, monospace",
        "fontSize": 17,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    interface IIdentifierFactory {
  </span>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "row",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      aria-hidden="true"
      className=""
      style={
        Object {
          "MsFlexBasis": "2em",
          "MsFlexPreferredSize": "2em",
          "WebkitFlexBasis": "2em",
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexBasis": "2em",
          "flexDirection": "column",
          "flexShrink": 0,
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "width": "2em",
          "zIndex": 0,
        }
      }
    />
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Inconsolata, monospace",
          "fontSize": 17,
          "fontWeight": 400,
          "lineHeight": "22px",
        }
      }
    >
      get(id: string): string;
    </span>
  </div>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Inconsolata, monospace",
        "fontSize": 17,
        "fontWeight": 400,
        "lineHeight": "22px",
      }
    }
  >
    }
  </span>
</div>
`;

exports[`wonder-blocks-core example 10 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "plum",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 32,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "fontFamily": "sans-serif",
        "fontSize": 24,
      }
    }
  >
    Hello, world!
  </span>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "backgroundColor": "goldenrod",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 4,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Even with an array and inline styles!
  </div>
</div>
`;

exports[`wonder-blocks-core example 11 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    onClick={[Function]}
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    Click me!
  </div>
  <span
    aria-hidden="true"
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
      }
    }
  >
    This text is hidden from screen readers.
  </span>
</div>
`;
